# JacobianODE

./: LICENSE  README.md  pyproject.toml  setup_env.sh
JacobianODE/control/: controllability.py  ilqr.py
JacobianODE/control/conf/: config.yaml
JacobianODE/control/conf/data/: wmtask.yaml
JacobianODE/control/conf/slurm/: default.yaml
JacobianODE/dysts_sim/: Make New Dynamics.ipynb  base.py  flows.py
JacobianODE/dysts_sim/data/: dynamical_systems.json
JacobianODE/jacobians/: __init__.py  data_utils.py  jacobianODE.py  jacobian_utils.py  lightning_base.py  lightning_utils.py  metrics.py  paths.py  run_jacobians.py  teacher_forcing.py  torchcubicspline_pw.py  wandb_utils.py
JacobianODE/jacobians/conf/: config.yaml
JacobianODE/jacobians/conf/data/: custom.yaml  dysts.yaml  rnnstablesmall.yaml  wmtask.yaml
JacobianODE/jacobians/conf/model/: default.yaml  gru.yaml  jaccomboode.yaml  lru.yaml  lstm.yaml  mlp.yaml  neuralode.yaml  resnet.yaml  shplrnn.yaml  transformer.yaml  unet.yaml  vae.yaml
JacobianODE/jacobians/conf/training/: training.yaml
JacobianODE/jacobians/outputs/2025-08-14/16-17-22/.hydra/: config.yaml  hydra.yaml
JacobianODE/models/: mlp.py  neuralode.py
JacobianODE/torchquad/: __init__.py
JacobianODE/torchquad/torchquad/: __init__.py
JacobianODE/torchquad/torchquad/integration/: gaussian.py  grid_integrator.py  integration_grid.py  simpson.py  trapezoid.py
JacobianODE/torchquad/torchquad/utils/: deployment_test.py
JacobianODE/wmtask/: __init__.py  wmdata_utils.py  wmtask.py
JacobianODE/wmtask/conf/: config.yaml
JacobianODE/wmtask/conf/slurm/: default.yaml
JacobianODE/wmtask/conf/wmtask_params/: default.yaml
_jupyter/: Lorenz (Demo).ipynb
