[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JacobianODE"
version = "0.1.0"
description = "A package for Jacobian-based ODE analysis"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.5.1",
    "numpy>=2.0.2",
    "scipy>=1.14.1",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.5.2",
    "torchdiffeq>=0.2.5",
    "torchquad>=0.4.0",
    "torchode>=1.0.0",
    "torchcubicspline>=0.0.3",
    "torchtyping>=0.1.5",
    "einops>=0.8.0",
    "hydra-core>=1.3.2",
    "wandb>=0.18.3",
    "loguru>=0.7.2",
    "omegaconf>=2.3.0",
    "cvxpy>=1.5.3",
    "clarabel>=0.9.0",
    "mosek>=11.0.8",
    "kooplearn>=1.1.3",
    "nolds>=0.6.1",
    "sdeint>=0.3.0",
    "pynumdiff>=0.1.2",
    "pychebfun>=0.3",
    "pot>=0.9.5",
    "opencv-python>=4.11.0.86",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=7.0",
]

[tool.setuptools]
packages = ["JacobianODE"]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 