[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "JacobianODE"
version = "0.1.0"
description = "A package for Jacobian-based ODE analysis"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["JacobianODE"]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3 